--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <h1 style="text-align: center;"><!--居中对齐-->
             看什么呢
         </h1>
-        <img src='' height=346px>
+        <img src='white.jpg' height=346px>
     </body>
 </html>
