--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
             your father
         </title>
         <style type="text/css">
-            h1 {color : red}
+            h1 {color : black}
             p {color :rgb(197, 37, 197)}
         </style>
     </head>
     <body style="background-color: aquamarine;"><!--背景颜色-->
-        <h1 style="text-align: center;"><!--居中对齐-->
+        <h1 style="text-align: center;color: brown;"><!--居中对齐-->
             看什么呢
         </h1>
-        <img src='white.jpg' height=346px>
+        <img style='float: left;' src='white.jpg' height=346px>
+        <h1>姓名 : 崔志豪</h1>
+        <br>
+        <h1>性别 : 男</h1>
+        <br>
+        <h1>职务 ：你爸爸</h1>
     </body>
 </html>
